# fastapi_using_poetry_project

./: README.md  pyproject.toml
fastapi_using_poetry_project/: main.py
tests/: test_main.py
