[tool.poetry]
name = "fastapi-using-poetry-project"
version = "0.1.0"
description = ""
authors = ["M. Awais Tariq <iammawaistariq@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
uvicorn = {extras = ["standard"], version = "^0.30.5"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
